ros2_ws/log/build_2023-03-05_16-12-14/merge_arrays/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/ros/ros2_ws/install/merge_arrays/lib/python3.10/site-packages/merge_arrays/merge_arrays_node.py", line 62
    elif(not self.arr_equal(list(self.merged_array.data), list(msg.data)):
                                                                         ^
SyntaxError: invalid syntax

